# GUI_MWF

./: .gitignore  GUI.py  MWF.py  README.md  batch_process.py  config.toml  pyproject.toml
comp/: mainframe.py  parameter_panel.py  parameter_sizers.py  plot_panel.py  range_slider.py
functions/: my_exceptions.py  utils.py
